--- a/highscores.html
+++ b/highscores.html
@@ -15,9 +15,10 @@
       <ol id="highscores"></ol>
 
       <a href="index.html"><button>Go Back</button></a>
-      <button id="clear">Clear Highscores</button>
+      <button id="clear" onclick="clearHighScore()";>Clear Highscores</button>
     </div>
 
     <script src="./assets/js/scores.js"></script>
+    <script src="./assets/js/questions.js"></script>
   </body>
 </html>
